# envilder-examples

./: .gitignore  README.md  envilder.json
dotnet-aspire/AppHost/: AppHost.csproj  Program.cs
dotnet-aspire/AppHost.Tests/: AppHost.Tests.csproj  AspireAppFixture.cs  LocalStackTests.cs
dotnet-testcontainers/: Envilder.Examples.Tests.csproj  LocalStackFixture.cs  LocalStackTests.cs
python-testcontainers/: pyproject.toml  test_localstack.py
typescript-aspire/: apphost.test.ts  apphost.ts  aspire.config.json  package-lock.json  package.json  tsconfig.json
typescript-testcontainers/: localstack.test.ts  package-lock.json  package.json  tsconfig.json
